--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="./src/photo/icon.png">
+    <link rel="icon" href="../public/photo/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click The Color Not The Word</title>
   </head>
